crates/rome_formatter/tests/specs/prettier/js/ternaries/nested-in-condition.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: nested-in-condition.js

---
# Input
```js
$var = ($number % 10 >= 2 && ($number % 100 < 10 || $number % 100 >= 20)
? kochabCooieGameOnOboleUnweave
: annularCooeedSplicesWalksWayWay)
  ? anodyneCondosMalateOverateRetinol
  : averredBathersBoxroomBuggyNurl;

const value = (bifornCringerMoshedPerplexSawder
? askTrovenaBeenaDependsRowans
: glimseGlyphsHazardNoopsTieTie)
  ? true
    ? true
    : false
  : true
  ? true
  : false;

(bifornCringerMoshedPerplexSawder ? (
  askTrovenaBeenaDependsRowans
) : (
  glimseGlyphsHazardNoopsTieTie
)) ? (
  <Element>
    <Sub />
    <Sub />
    <Sub />
    <Sub />
    <Sub />
    <Sub />
  </Element>
) : (
  <Element2>
    <Sub />
    <Sub />
    <Sub />
  </Element2>
);

```

# Output
```js
$var =
  (
    $number % 10 >= 2 && ($number % 100 < 10 || $number % 100 >= 20) ? kochabCooieGameOnOboleUnweave : annularCooeedSplicesWalksWayWay
  ) ? anodyneCondosMalateOverateRetinol : averredBathersBoxroomBuggyNurl;

const value = (
  bifornCringerMoshedPerplexSawder ? askTrovenaBeenaDependsRowans : glimseGlyphsHazardNoopsTieTie
) ? true ? true : false : true ? true : false;

(bifornCringerMoshedPerplexSawder ? (
  askTrovenaBeenaDependsRowans
) : (
  glimseGlyphsHazardNoopsTieTie
)) ? (
  <Element>
    <Sub />
    <Sub />
    <Sub />
    <Sub />
    <Sub />
    <Sub />
  </Element>
) : (
  <Element2>
    <Sub />
    <Sub />
    <Sub />
  </Element2>
);

```

# Errors
```
error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ nested-in-condition.js:22:3
   │  
22 │ ┌   <Element>
23 │ │     <Sub />
   │ └────────^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
   ┌─ nested-in-condition.js:23:11
   │
23 │     <Sub />
   │          -^ But this operator was encountered instead
   │          │ 
   │          This operator requires a right hand side value

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ nested-in-condition.js:24:5
   │
24 │     <Sub />
   │     ^^^^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
   ┌─ nested-in-condition.js:24:11
   │
24 │     <Sub />
   │          -^ But this operator was encountered instead
   │          │ 
   │          This operator requires a right hand side value

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ nested-in-condition.js:25:5
   │
25 │     <Sub />
   │     ^^^^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
   ┌─ nested-in-condition.js:25:11
   │
25 │     <Sub />
   │          -^ But this operator was encountered instead
   │          │ 
   │          This operator requires a right hand side value

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ nested-in-condition.js:26:5
   │
26 │     <Sub />
   │     ^^^^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
   ┌─ nested-in-condition.js:26:11
   │
26 │     <Sub />
   │          -^ But this operator was encountered instead
   │          │ 
   │          This operator requires a right hand side value

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ nested-in-condition.js:27:5
   │
27 │     <Sub />
   │     ^^^^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
   ┌─ nested-in-condition.js:27:11
   │
27 │     <Sub />
   │          -^ But this operator was encountered instead
   │          │ 
   │          This operator requires a right hand side value

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ nested-in-condition.js:28:5
   │
28 │     <Sub />
   │     ^^^^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
   ┌─ nested-in-condition.js:28:11
   │
28 │     <Sub />
   │          -^ But this operator was encountered instead
   │          │ 
   │          This operator requires a right hand side value

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ nested-in-condition.js:29:3
   │
29 │   </Element>
   │   ^ TypeScript only syntax

error[SyntaxError]: expected an expression but instead found ')'
   ┌─ nested-in-condition.js:30:1
   │
30 │ ) : (
   │ ^ Expected an expression here

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ nested-in-condition.js:31:3
   │  
31 │ ┌   <Element2>
32 │ │     <Sub />
   │ └────────^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
   ┌─ nested-in-condition.js:32:11
   │
32 │     <Sub />
   │          -^ But this operator was encountered instead
   │          │ 
   │          This operator requires a right hand side value

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ nested-in-condition.js:33:5
   │
33 │     <Sub />
   │     ^^^^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
   ┌─ nested-in-condition.js:33:11
   │
33 │     <Sub />
   │          -^ But this operator was encountered instead
   │          │ 
   │          This operator requires a right hand side value

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ nested-in-condition.js:34:5
   │
34 │     <Sub />
   │     ^^^^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
   ┌─ nested-in-condition.js:34:11
   │
34 │     <Sub />
   │          -^ But this operator was encountered instead
   │          │ 
   │          This operator requires a right hand side value

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ nested-in-condition.js:35:3
   │
35 │   </Element2>
   │   ^ TypeScript only syntax

error[SyntaxError]: expected an expression but instead found ')'
   ┌─ nested-in-condition.js:36:1
   │
36 │ );
   │ ^ Expected an expression here


```


